Make sure email is clipped if too long.

--- a/client/post-editor/style.scss
+++ b/client/post-editor/style.scss
@@ -16,6 +16,14 @@
 		&.confirmation-dialog__email {
 			margin-bottom: 16px;
 			color: darken( $gray, 10 );
+			
+			span {
+				display: inline-block;
+				max-width: 70%;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				margin-right: 5px;
+			}
 		}
 
 		&.confirmation-dialog__reasoning {
